src/test/ui/error-codes/E0565.rs
// repr currently doesn't support literals
#[repr("C")] //~ ERROR E0565
struct A {  }

fn main() {  }
